--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -5,6 +5,10 @@
     },
     "ToDoPc (Unpackaged)": {
       "commandName": "Project"
+    },
+    "WSL": {
+      "commandName": "WSL2",
+      "distributionName": ""
     }
   }
 }
